--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "1"
+version: "3.8"
 
 services:
   server:
@@ -10,8 +10,13 @@ services:
     networks:
       - picz
     ports:
-      - "3001:3001"
-      - "5555:5555"
+      - "3001:3001" # for backend
+      - "5555:5555" # for prisma db
+    volumes:
+      - ./server:/app
+      - /app/node_modules
+    command: npm run dev
+
   client:
     build:
       context: ./client
@@ -22,6 +27,10 @@ services:
       - picz
     ports:
       - "5173:5173"
+    volumes:
+      - ./client:/app
+      - /app/node_modules
+    command: sh -c "npm rebuild && npm run dev -- --host"
 
 networks:
   picz:
