--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.674.0",
     "@prisma/client": "^5.21.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
