--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.13.0",
+    "@mantine/dropzone": "^7.13.3",
     "@mantine/form": "^7.13.2",
     "@mantine/hooks": "^7.13.0",
     "@mantinex/mantine-logo": "^1.0.1",
