--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "postcss-preset-mantine": "^1.17.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "vite": "^5.4.1",
+    "vite-plugin-chunk-split": "^0.5.0"
   }
 }
