--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -25,7 +25,7 @@ jobs:
 
       - name: Pull image
         run: |
-          docker pull sunnyeyles/picz-client:latest
+          docker pull sunnyeyles/picz-client:1
 
       - name: Run container with env variables
         run: |
@@ -37,4 +37,4 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t sunnyeyles/picz-client:latest .
+          docker build -t sunnyeyles/picz-client:1 .
