--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -31,9 +31,8 @@ jobs:
         run: |
           docker run --rm \
             -e VITE_API_URL=${{ secrets.VITE_API_BASE_URL }} \
-            -e NODE_ENV=development \
             -p 5173:5173 \
-            sunnyeyles/picz-client:latest
+            sunnyeyles/picz-client:1
 
       - name: Build Docker image
         run: |
