--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - development
   pull_request:
   workflow_dispatch:
 
@@ -25,11 +26,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build --platform linux/arm64/v8 -t sunnyeyles/picz-client:1 -f ./client/Dockerfile ./client
+          docker build --platform linux/arm64 -t sunnyeyles/picz-client:1 -f ./client/Dockerfile ./client
 
       - name: Run container with env variables
         run: |
-          docker run --rm --platform linux/arm64/v8 \
+          docker run --rm --platform linux/arm64 \
             -e VITE_API_URL=${{ secrets.VITE_API_BASE_URL }} \
             -p 5173:5173 \
             sunnyeyles/picz-client:1
