--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -26,11 +26,11 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build -t sunnyeyles/picz-client:1 ./client # Specify the path to the Dockerfile or build context
+          docker build -t sunnyeyles/picz-client:1 ./client
 
       - name: Run container with env variables
         run: |
-          docker run \
+          docker run --rm \
             -e VITE_API_URL=${{ secrets.VITE_API_BASE_URL }} \
             -p 5173:5173 \
             sunnyeyles/picz-client:1
