--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -4,34 +4,27 @@ on:
   push:
     branches:
       - main
-      - development
-  pull_request:
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
+      - name: Check out repository
         uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
 
-      - name: Login to Docker Hub
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Pull image from Docker Hub
-        run: |
-          docker pull sunnyeyles/picz-client:staging
-
-      - name: Run container with environment variables
-        run: |
-          docker run --rm \
-            -e VITE_API_URL=${{ secrets.VITE_API_BASE_URL }} \
-            -p 5173:5173 \
-            --platform linux/amd64 \
-            sunnyeyles/picz-client:staging
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          platforms: linux/amd64
+          push: true
+          tags: staging
