--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+      - development
+  workflow_dispatch:
 
 jobs:
   build:
@@ -13,18 +15,13 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
+        uses: docker/setup-buildx-action@v2
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
+      - name: Build Docker image
         uses: docker/build-push-action@v3
         with:
-          context: .
+          context: ./client
+          file: ./client/Dockerfile
           platforms: linux/amd64
-          push: true
-          tags: staging
+          push: false
+          tags: staging:test
