--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -14,8 +14,21 @@ jobs:
       - name: Check out repository
         uses: actions/checkout@v3
 
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20"
+
+      - name: Install dependencies
+        working-directory: ./client
+        run: npm ci
+
+      - name: Run lint
+        working-directory: ./client
+        run: npm run lint
+
       - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
+        uses: docker/setup-buildx-action@v3
 
       - name: Build Docker image
         uses: docker/build-push-action@v3
@@ -25,3 +38,4 @@ jobs:
           platforms: linux/amd64
           push: false
           tags: staging:test
+          build-args: --no-cache
