--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - picz
     ports:
       - "3001:3001" # for backend
-      - "5555:5555" # for prisma db
+      - "5555:5555" # for prisma studio
     volumes:
       - ./server:/app
       - /app/node_modules
@@ -32,6 +32,22 @@ services:
       - /app/node_modules
     command: sh -c "npm rebuild && npm run dev -- --host"
 
+  postgres:
+    image: postgres:12
+    environment:
+      POSTGRES_USER: admin
+      POSTGRES_PASSWORD: admin
+      POSTGRES_DB: piczDB
+    networks:
+      - "picz"
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+
 networks:
   picz:
     driver: bridge
+
+volumes:
+  postgres_data:
