--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && npm run lint && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -30,7 +30,7 @@
     "@vitejs/plugin-react": "^4.3.1",
     "eslint": "^9.9.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.9.0",
     "postcss-preset-mantine": "^1.17.0",
     "typescript": "^5.5.3",
